# list-files-macro-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: list_files.rs
tests/files/: a.rs  b.rs  c.rs
