[package]
name = "list_files_macro"
description = "A simple proc macro to generate a const list of filenames and optionally apply a macro to each"
keywords = ["macro", "list", "load", "run", "files"]
categories = ["development-tools", "filesystem", "rust-patterns"]
documentation = "https://docs.rs/list_files_macro"
homepage = "https://github.com/LukeMiles49/list-files-macro-rs"
version = "0.1.0"
authors = ["Luke Miles <luke.49@live.co.uk>"]
license = "MIT"
repository = "https://github.com/LukeMiles49/list-files-macro-rs"
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
glob = "0.3.0"
quote = "^1.0.21"
syn = "^1.0.99"

[dev-dependencies]
version-sync = "^0.9.4"
